<resources>
    <string name="app_name">Grammar Pro</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="completed">Congratulations!!</string>
    <string name="congratulations">Congratulations!!</string>
    <string name="time_challenge_msg">You have completed challenge in&#160;</string>
    <string name="sec">&#160;sec&#160;</string>
    <string name="not_completed">Better Luck Next Tme</string>
    <string name="select_level">Select Level</string>
    <string name="select_category">Select Category</string>
    <string name="select_sub_category">Select SubCategory</string>
    <string name="self_challenge">Self Challenge</string>
    <string name="daily_quiz">Daily Quiz</string>
    <string name="learning_zone">Learning Zone</string>
    <string name="learning_play">Learning Play</string>
    <string name="account_delete">Account Delete?</string>
    <string name="delete_msg">Are you sure you want to delete your Account?\nThis action cannot be undone.After your account deleted , you will be logged out and all other  active session will be terminated.</string>
    <string name="random_quiz">Random Quiz</string>
    <string name="contest">Contest</string>
    <string name="sound">Sound</string>
    <string name="apply_code">Apply Referral Code</string>
    <string name="Username">Username</string>
    <string name="apply">Apply</string>
    <string name="share_app">Share App</string>
    <string name="update_msg_1">Update the app for a batter experience!</string>
    <string name="not_now">Not Now</string>
    <string name="update_now">Update</string>
    <string name="update_alert">Update Alert</string>
    <string name="vibration">Vibration</string>
    <string name="rateapp">Rate Us</string>
    <string name="bg_music">Background Music</string>
    <string name="share_via">Share via</string>
    <string name="next_play">Play Next Level</string>
    <string name="play_again">Play Again</string>
    <string name="quite">Review</string>
    <string name="review_answer">Review</string>
    <string name="share_score">Share Score</string>
    <string name="share_result">Share Result</string>
    <string name="action_settings">Submit Your Rating</string>
    <string name="play_next">Play Again</string>
    <string name="lets_play">Let\'s Play</string>
    <string name="instruction">Instruction</string>
    <string name="coinstore">Coin Store</string>
    <string name="msg_no_internet">No internet connection!!</string>
    <string name="no_category">category not available!!</string>
    <string name="no_data">data not found!!</string>
    <string name="ttl_ques">Ques :&#160;</string>
    <string name="select_no_of_question">Select Number Of Questions</string>
    <string name="select_time_period">Select Time Period in Minutes</string>
    <string name="no_sub_category">sub category not available!!</string>
    <string name="no_enough_question">Not enough questions, to play level.</string>
    <string name="no_enough_questiondaily">Daily Quiz not Available or you already played Daily Quiz!!</string>
    <string name="retry">RETRY</string>
    <string name="title">Title</string>
    <string name="lets_start">Let\'s Start</string>
    <string name="hello">Hello,&#160;</string>
    <string name="_coins">&#160;Coins</string>
    <string name="bm_empty_msg">bookmark not available</string>
    <string name="empty_alert_msg">Field should not be empty</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="un_attend">Un-Attempted</string>
    <string name="answer">answer</string>
    <string name="answerbookmark">Answer : </string>
    <string name="extra_note">Extra Note</string>
    <string name="note">Note</string>
    <string name="ok">OKAY</string>
    <string name="ad_attribution">Ad</string>
    <string name="report">Report Question</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="review">Review</string>
    <string name="result">Result</string>
    <string name="title_already_used">Life Line Already Used !!</string>
    <string name="msg_lifeline_used">You can use only once per level</string>
    <string name="self_challenge_sub_msg">Are you sure ?\nYou want to submit this test?</string>
    <string name="true_ans">True Ans: </string>
    <string name="zero">0</string>
    <string name="challenge_time">Challenge Time&#160;</string>
    <string name="loading">Loading…</string>
    <string name="bookmark_list">Bookmark List</string>
    <string name="level_not_available">Level not available</string>
    <string name="go_back">Go Back</string>
    <string name="login">Login</string>
    <string name="signup">CREATE ACCOUNT</string>
    <string name="signup_alert">you are not registered yet, please SignUp</string>
    <string name="invalid_pass">The password is invalid, please check your password</string>
    <string name="email_alert_1">Please enter email address</string>
    <string name="email_alert_2">Please enter valid email address</string>
    <string name="pass_alert">Please enter password</string>
    <string name="from_camera">Capture from Camera</string>
    <string name="verify_email_sent">Verification email sent to &#160;</string>
    <string name="verify_email_sent_f">Failed to send verification email.</string>
    <string name="ref_code">Referral code</string>
    <string name="act_verify_1">A Verified link has been sent to your email account</string>
    <string name="act_verify_2">Please click on the link that has just been sent to your email account to verify your email and continue the login process.</string>
    <string name="account_deactivate">Your Account is deactivate by admin</string>
    <string name="select_language">Select Your Mode Of Study</string>
    <string name="refer_share_msg_1">I have earned coins using&#160;</string>
    <string name="refer_share_msg_2">&#160;app. you can also earn coin by downloading app from below link and enter referral code while login-&#160; </string>
    <string name="msg_enough_coin">Not Enough Coins !!</string>
    <string name="coin_message1">You Need to Select One</string>
    <string name="coin_message2">&#160;coins to use this lifeline. \n\nWatch a short video &amp; get free coins</string>
    <string name="not_enough_coin">You don\'t have enough coins.</string>
    <string name="skip">Skip</string>
    <string name="msg_watch_video">Watch Now</string>
    <string name="attended">Attended Ques</string>
    <string name="correct_ans">Correct Ans</string>
    <string name="about_us">About Us</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="notification">Notification</string>
    <string name="logout">Logout</string>
    <string name="statistics">Statistics</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms">Terms of Service</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="invite_frnd">Invite friends</string>
    <string name="logout_msg">Are you sure you want to logout?</string>
    <string name="otp_msg">OTP has been sent to you on your mobile phone. \n Please enter it below</string>
    <string name="enter_otp">Enter Your OTP</string>
    <string name="verify">Verify</string>
    <string name="enter_email">Enter email address</string>
    <string name="reset_msg1">Enter the email address associated with your account.</string>
    <string name="reset_msg2">We will email you a link \nto reset your password</string>
    <string name="device_language">Device Language</string>
    <string name="instractin_text1">N.B: – All photos that have been used in that App are copyrighted.  Illegal uses/edit/modifications of those photos, if any, shall be held guilty and liable for punishable offence. </string>
    <string name="instractin_text2">Idioms and Phrases”, “One Words”, “Phrasal Verbs”, “Appropriate Prepositions”, “Vocabulary with Images”.</string>
    <string name="instractin_text3">In these sections, you will get three Portions: firstly, “Learning with Images”. By clicking on this section you can enter into a segment where, initially, you will get a list of 25 sets of flashcards with cartoon images (all photos are copyrighted by Englivia and set will be updated with times) each set containing 10 questions each.

After clicking on any set according to your choice you will get the meaning of above-mentioned subjects in different languages, viz., Hindi, English and Bengali (according to your language selection) and a cartoon photo regarding that Idiom and Phrase in order to help you to memorize that Idiom permanently into your memory and also there will be a definition of that Idiom therein.

Secondly, you will get a portion named “Quiz with Definition”. By clicking on this section you can enter into a segment where, initially, you will get a list of 25 sets, options based quiz along with definition according to the languages chosen (set will be updated with times) each set containing 10 questions each.

Thirdly, you will get a portion named “Final Exam” where you can give exam. Where you can give exam like any other exam and at last you can evaluate yourself. </string>
    <string name="instractin_text4">Courses/Features:-
\nSpelling Tests.\n
Here, we will cover almost all essential words from all Dictionaries in the form of quiz. Initially, we are providing upto SET-15 and with times we will keep on updating our SETs.  It will help you to practice all words spelling for that purpose you will be ace in spelling and your writing skills will be improved and you will get a job in any Government organization as well as private sectors according to your wish.
\n
\nVocabulary with images.\n
Here, we will cover almost all essential words from all Dictionaries in the form Images with definitions.  Definitions will be in three languages i.e. Bengali, English and Hindi. Englivia reserved all Copyright regarding all images that has been used in that App.  Initially, we are providing upto SET-4 and with times we will keep on updating our SETs.
\n
\nPart of Speech tests.\n
For the first time we are introducing Parts of Speech test in the form of quiz.  It will help you to know about the Parts of Speech of a particular word in a sentence in order to build your confidence in writing and reading skills as well.

Initially, we are providing upto SET-15 and with times we will keep on updating our SETs.
\n
\nError Corrections. (with definitions)\n
Here, we will cover almost all the rules with definitions in three languages i.e. Bengali, Hindi and English relating to Error Corrections regarding Government job examination and moreover, by practicing this portion it will help any person to build up their Grammar as well as writing skills.

Initially, we are providing upto SET-10 with definitions in three languages i.e. Bengali, English and Hindi and with times we will keep on updating our SETs.
\n
\nSynonyms And\n
Here, we will cover almost all essential words from all Dictionaries in the form quiz with its meaning in three different languages i.e. Bengali, Hindi and English.  By practicing these portions, you will be able to know all the words with its meaning.

Initially, we are providing SET-25 with definitions in three languages i.e. Bengali, English and Hindi and with times we will keep on updating our SETs.
\n
\nNewspaper words and phrase with meaning and Quiz.\n
Here, we will cover almost all essential words and phrases with its meaning in Bengali and Hindi, that are used frequently almost all the newspapers.

Initially, we are providing SET-25 with definitions in two languages i.e. Bengali and Hindi and with times we will keep on updating our SETs. </string>
</resources>