<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">


        <item
            android:id="@+id/leaderboard"
            android:icon="@drawable/ic_leaderboard"
            android:title="@string/leaderboard"
            android:visible="false"
            style="@style/AppTheme.MenuText"
            />
        <item
            android:id="@+id/statistic"
            android:icon="@drawable/ic_statistics"
            android:title="@string/statistics"
            android:visible="false"
            style="@style/AppTheme.MenuText"/>
        <item
            android:id="@+id/bookmark"
            android:icon="@drawable/ic_bookmarks"
            android:title="@string/bookmarks"
            android:visible="false"
            style="@style/AppTheme.MenuText"/>
        <item
            android:id="@+id/notification"
            android:icon="@drawable/ic_notifications"
            android:title="@string/notification"
            style="@style/AppTheme.MenuText"/>
    </group>

    <group
        android:id="@+id/menu_middle"
        android:checkableBehavior="single">
        <item
            android:id="@+id/invite"
            android:icon="@drawable/ic_invite"
            android:title="@string/invite_frnd"
            android:visible="false"
            style="@style/AppTheme.MenuText"/>

        <item
            android:id="@+id/instruction"
            android:icon="@drawable/ic_introduction"
            android:title="@string/instruction" />
        <item
            android:id="@+id/setting"
            android:icon="@drawable/ic_settings"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/DevicLang"
            android:icon="@drawable/ic_language1"
            android:title="@string/device_language"
            android:visible="false"/>
        <item
            android:id="@+id/share"
            android:icon="@drawable/ic_share"
            android:title="@string/share_app" />
    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_about"
            android:title="@string/about_us" />
        <item
            android:id="@+id/contactus"
            android:icon="@drawable/email"
            android:title="Contact Us" />
        <item
            android:id="@+id/terms"
            android:icon="@drawable/ic_terms"
            android:title="@string/terms" />
        <item
            android:id="@+id/privacy"
            android:icon="@drawable/ic_privacy"
            android:title="@string/privacy_policy" />
    </group>
<!--<item
    android:id="@+id/logout"
    android:icon="@drawable/logout"
    android:title="@string/logout"
    />-->
</menu>