<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bootomshit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/forgatebgpg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

       >

        <Button
            android:id="@+id/imgClose"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/margin_20dp"
            android:layout_marginTop="@dimen/margin_20dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/ic_close"
            android:padding="@dimen/margin_20dp" />

        <ImageView
            android:id="@+id/imagevie"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@+id/imgClose"
            android:src="@drawable/forgatepg"

            />


        <TextView
            android:id="@+id/maintxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imagevie"
            android:layout_marginStart="@dimen/margin_20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="@dimen/margin_20dp"
            android:gravity="center"
            android:text="@string/reset_msg1"
            android:textColor="#9C27B0"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/closenear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/maintxt"
            android:layout_marginStart="@dimen/margin_20dp"
            android:layout_marginTop="@dimen/margin_20dp"
            android:layout_marginEnd="@dimen/margin_20dp"
            android:gravity="center"
            android:text="@string/reset_msg2"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/emailryt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/closenear"
            android:background="@drawable/white_rec_bg"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:elevation="15dp"
            android:outlineSpotShadowColor="#9C27B0"
           >

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_10dp"
                android:layout_marginEnd="@dimen/margin_10dp"
                android:background="@drawable/white_rec_bg"
                android:drawableLeft="@drawable/email"
                android:drawablePadding="10dp"
                android:hint="@string/enter_email"
                android:maxLines="1"
                android:padding="@dimen/margin_10dp"
                android:textColor="#000000"
                android:textColorHint="#474343"
                android:textSize="20dp"



                />
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/emailsubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailryt"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/padding_10"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="@dimen/padding_10"
            android:layout_marginBottom="100dp"
            android:layout_weight="1"
            android:clipChildren="false"
            android:clipToPadding="false"

            android:dividerHeight="0.0px"
            android:elevation="8dp"
            android:outlineSpotShadowColor="#605AF6"
            app:cardBackgroundColor="#000DFF"
            app:cardCornerRadius="30dp"
            card_view:cardElevation="15dp"
            card_view:cardPreventCornerOverlap="false">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="@dimen/padding_10"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="@dimen/padding_10"
                android:layout_weight="1"
                android:fontFamily="@font/open_sans_bold"
                android:gravity="center"

                android:text="@string/submit"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="25dp" />
        </androidx.cardview.widget.CardView>


    </RelativeLayout>
</LinearLayout>