<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"
>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

     >
        <LinearLayout
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/logoutimg" />
            <TextView

                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:gravity="center|top"
                android:padding="7dp"
                android:text="@string/logout"
                android:textAllCaps="false"
                android:textColor="#00BCD4"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="#00BCD4"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:id="@+id/tv_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout_msg"
            android:textSize="18dp"
            android:padding="@dimen/margin_5dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="normal"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray"
            android:layout_marginTop="5dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/tvYes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="16dp"
                android:padding="8dp"
                android:text="@string/yes"
                android:textColor="@color/black"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/light_gray"
   />
            <TextView
                android:id="@+id/tvNo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="16dp"
                android:padding="8dp"
                android:text="@string/no"
                android:textColor="@color/black"/>
        </LinearLayout>
      <!--  <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:fontFamily="@font/open_sans"
            android:gravity="center|top"
            android:padding="7dp"
            android:text="@string/logout"
            android:textAllCaps="true"
            android:textColor="#00BCD4"
            android:textSize="20dp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:background="@drawable/logoutimg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/tv_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10dp"
                android:gravity="center"
                android:text="@string/logout_msg"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/tvYes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:layout_marginStart="@dimen/padding_10"
                android:padding="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/yes"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:background="@drawable/border"/>

            <TextView
                android:id="@+id/tvNo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:gravity="center"
                android:layout_marginStart="@dimen/padding_10"
                android:textSize="16sp"
                android:padding="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/no"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:background="@drawable/border"/>
        </LinearLayout>-->
    </LinearLayout>
</LinearLayout>
